- add java and graalvm version fields in InternalProjectConfiguration - only add '--add-exports' argument when needed